--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
-    "functions": {
-        "api/**/*.php": { "runtime": "vercel-php@0.6.0" }
-    },
+    "version": 2,
+    "builds": [
+        { "src": "api/vercel.php", "use": "vercel-php@0.6.0" },
+        { "src": "api/**/*.php", "use": "vercel-php@0.6.0" },
+        { "src": "api/public/**", "use": "@vercel/static" }
+    ],
     "routes": [
+        { "src": "/admin/index.php", "dest": "/api/admin/index.php" },
+        { "src": "/admin/login_form.php", "dest": "/api/admin/login_form.php" },
+        { "src": "/admin", "dest": "/api/admin/index.php" },
         { "src": "/admin/(.*)", "dest": "/api/admin/$1" },
         { "src": "/assets/(.*)", "dest": "/api/assets/$1" },
         { "src": "/css/(.*)", "dest": "/api/css/$1" },
@@ -16,6 +22,6 @@
         { "src": "/public/(.*)", "dest": "/api/public/$1" },
         { "src": "/(.*)\\.html", "dest": "/api/public/$1.html" },
         { "src": "/(.*)\\.php", "dest": "/api/$1.php" },
-        { "src": "/(.*)", "dest": "/api/index.php" }
+        { "src": "/(.*)", "dest": "/api/vercel.php" }
     ]
 } 
