--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,14 @@
         }
     },
     "routes": [
+        { "src": "^/$", "dest": "/api/vercel.php" },
+        { "src": "/index.html", "dest": "/api/vercel.php" },
+        { "src": "/test_index.php", "dest": "/api/test_index.php" },
         { "src": "/favicon.ico", "dest": "/api/public/favicon.ico" },
         { "src": "/css/(.*)", "dest": "/api/css/$1" },
         { "src": "/js/(.*)", "dest": "/api/js/$1" },
         { "src": "/assets/(.*)", "dest": "/api/assets/$1" },
-        { "src": "/pages/(.*)", "dest": "/api/pages/$1" },
+        { "src": "/pages/(.*)", "dest": "/api/vercel.php" },
         { "src": "/admin/index.php", "dest": "/api/admin/index.php" },
         { "src": "/admin/login_form.php", "dest": "/api/admin/login_form.php" },
         { "src": "/admin", "dest": "/api/admin/index.php" },
@@ -18,11 +21,10 @@
         { "src": "/db_test.php", "dest": "/api/db_test.php" },
         { "src": "/test.php", "dest": "/api/test.php" },
         { "src": "/test.html", "dest": "/api/public/test.html" },
-        { "src": "/", "dest": "/api/index.html" },
         { "src": "/static/(.*)", "dest": "/api/static-serve.php" },
-        { "src": "/(.*)\\.html", "dest": "/api/static-serve.php" },
+        { "src": "/(.*)\\.html", "dest": "/api/vercel.php" },
         { "src": "/(.*)\\.php", "dest": "/api/$1.php" },
-        { "src": "/(.*)", "dest": "/api/static-serve.php" }
+        { "src": "/(.*)", "dest": "/api/vercel.php" }
     ],
     "build": {
         "env": {
