--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,35 @@
 {
     "version": 2,
-    "functions": {
-        "api/**/*.php": {
-            "runtime": "vercel-php@0.6.0"
-        }
-    },
+    "builds": [
+        { "src": "api/vercel.php", "use": "vercel-php@0.6.0" },
+        { "src": "api/**/*.php", "use": "vercel-php@0.6.0" },
+        { "src": "api/public/**", "use": "@vercel/static" },
+        { "src": "public/**", "use": "@vercel/static" }
+    ],
     "routes": [
-        { "src": "^/$", "dest": "/api/vercel.php" },
-        { "src": "/index.html", "dest": "/api/vercel.php" },
-        { "src": "/test_index.php", "dest": "/api/test_index.php" },
-        { "src": "/favicon.ico", "dest": "/api/public/favicon.ico" },
-        { "src": "/css/(.*)", "dest": "/api/css/$1" },
-        { "src": "/js/(.*)", "dest": "/api/js/$1" },
-        { "src": "/assets/(.*)", "dest": "/api/assets/$1" },
-        { "src": "/pages/(.*)", "dest": "/api/vercel.php" },
         { "src": "/admin/index.php", "dest": "/api/admin/index.php" },
         { "src": "/admin/login_form.php", "dest": "/api/admin/login_form.php" },
         { "src": "/admin", "dest": "/api/admin/index.php" },
         { "src": "/admin/(.*)", "dest": "/api/admin/$1" },
-        { "src": "/db_test.php", "dest": "/api/db_test.php" },
-        { "src": "/test.php", "dest": "/api/test.php" },
-        { "src": "/test.html", "dest": "/api/public/test.html" },
-        { "src": "/static/(.*)", "dest": "/api/static-serve.php" },
-        { "src": "/(.*)\\.html", "dest": "/api/vercel.php" },
+        { "src": "/index.html", "dest": "/api/public/index.html" },
+        { "src": "/", "dest": "/api/public/index.html" },
+        { "src": "/assets/(.*)", "dest": "/api/assets/$1" },
+        { "src": "/css/(.*)", "dest": "/api/css/$1" },
+        { "src": "/js/(.*)", "dest": "/api/js/$1" },
+        { "src": "/includes/(.*)", "dest": "/api/includes/$1" },
+        { "src": "/pages/(.*)", "dest": "/api/pages/$1" },
+        { "src": "/errors/(.*)", "dest": "/api/errors/$1" },
+        { "src": "/docs/(.*)", "dest": "/api/docs/$1" },
+        { "src": "/data/(.*)", "dest": "/api/data/$1" },
+        { "src": "/php/(.*)", "dest": "/api/php/$1" },
+        { "src": "/public/(.*)", "dest": "/api/public/$1" },
+        { "src": "/(.*)\\.html", "dest": "/api/public/$1.html" },
         { "src": "/(.*)\\.php", "dest": "/api/$1.php" },
         { "src": "/(.*)", "dest": "/api/vercel.php" }
     ],
-    "build": {
-        "env": {
-            "PHP_VERSION": "8.1"
-        }
+    "env": {
+        "PHP_VERSION": "8.0",
+        "PHP_MEMORY_LIMIT": "128M",
+        "DEBUG": "true"
     }
 } 
