справление ошибки среды выполнения PHP в Vercel

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,16 +1,11 @@
 .git
-.github
 .gitignore
 README.md
+deploy.ps1
 copy_dirs.ps1
-tatus
-ershehexd420DesktopSiteWeb
-.env
-.env.example
 db_structure.sql
-/node_modules
-/.idea
-/.vscode
-*.log
-*.bak
-*.tmp 
+node_modules
+hotel_project
+.env.example
+tatus
+*.log 
