птимизация проекта для Vercel: исправлены конфликты в vercel.json, добавлены скрипты для управления и обслуживания, оптимизирован код

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,37 @@
-# Пример файла .env для настройки переменных окружения
-# Скопируйте этот файл в .env и заполните своими значениями
+# Пример файла .env для Vercel
+# Скопируйте этот файл в .env для локальной разработки
+# или добавьте эти переменные в настройках проекта Vercel
 
-# Настройки базы данных
+# ===== НАСТРОЙКИ БАЗЫ ДАННЫХ =====
+# Необходимы для работы сайта на Vercel
 DB_HOST=localhost
 DB_NAME=db_hotel
 DB_USER=db_user
 DB_PASSWORD=db_password
 
-# Настройки сайта
-SITE_URL=https://your-domain.com
+# ===== НАСТРОЙКИ САЙТА =====
+SITE_URL=https://your-domain.vercel.app
+SITE_NAME=Гостиница "Лесной дворик"
 ADMIN_EMAIL=admin@example.com
 
-# Настройки для отправки почты
+# ===== НАСТРОЙКИ ПОЧТЫ =====
+# Для отправки уведомлений о бронированиях
 MAIL_HOST=smtp.example.com
 MAIL_PORT=587
 MAIL_USERNAME=user@example.com
 MAIL_PASSWORD=your_password
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=noreply@example.com
-MAIL_FROM_NAME="Гостиница Лесной дворик" 
+MAIL_FROM_NAME="Гостиница Лесной дворик"
+
+# ===== НАСТРОЙКИ API =====
+# API-ключ Яндекс.Карт для отображения карты на сайте
+YANDEX_MAPS_API_KEY=your_api_key
+
+# ===== НАСТРОЙКИ БЕЗОПАСНОСТИ =====
+# Секретный ключ для шифрования данных
+APP_SECRET_KEY=change_this_to_a_random_string
+
+# ===== НАСТРОЙКИ ЛОГИРОВАНИЯ =====
+# Уровень логирования (debug, info, warning, error)
+LOG_LEVEL=info 
