--- a/.vercelignore
+++ b/.vercelignore
@@ -1,11 +1,37 @@
+# Git
 .git
 .gitignore
+
+# Документация и разработка
 README.md
+CHANGELOG.md
+LICENSE
+*.md
+*.txt
+!api/public/robots.txt
+
+# Временные файлы
+node_modules
 deploy.ps1
 copy_dirs.ps1
-db_structure.sql
-node_modules
-hotel_project
-.env.example
+*.log
+.DS_Store
+Thumbs.db
 tatus
-*.log 
+ershehexd420DesktopSiteWeb
+
+# Окружение и настройки
+.env*
+!.env.example
+
+# Базы данных и тесты
+*.sql
+!api/docs/db_setup.sql
+tests/
+*.test.js
+*.spec.js
+
+# Исходники и файлы разработки
+.vscode/
+.idea/
+*.map 
