--- a/.env.example
+++ b/.env.example
@@ -34,4 +34,28 @@ APP_SECRET_KEY=change_this_to_a_random_string
 
 # ===== НАСТРОЙКИ ЛОГИРОВАНИЯ =====
 # Уровень логирования (debug, info, warning, error)
-LOG_LEVEL=info 
+LOG_LEVEL=info
+
+# Конфигурация базы данных MongoDB
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/lesnoy-dvorik?retryWrites=true&w=majority
+
+# Секретный ключ для JWT
+JWT_SECRET=your-secret-key-for-jwt-tokens
+
+# Настройки API
+API_URL=https://lesnoy-dvorik.netlify.app/.netlify/functions
+
+# Настройки для отправки email
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@example.com
+EMAIL_PASSWORD=your-email-password
+EMAIL_FROM=Лесной дворик <info@lesnoy-dvorik.ru>
+
+# Настройки для разработки
+NODE_ENV=development
+DEBUG=true
+
+# Настройки для Netlify
+NETLIFY_SITE_ID=your-netlify-site-id
+NETLIFY_AUTH_TOKEN=your-netlify-auth-token 
