--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Vercel
 .vercel
-node_modules
+node_modules/
+package-lock.json
+yarn.lock
 
 # Окружение
 .env
@@ -14,7 +16,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs
+logs/
 *.tmp
 *.swp
 *.swo
@@ -44,4 +46,29 @@ ershehexd420DesktopSiteWeb
 
 # Файлы загрузок и пользовательские данные
 api/public/uploads/*
-!api/public/uploads/.gitkeep 
+!api/public/uploads/.gitkeep
+
+# Локальные настройки Netlify
+.netlify/
+
+# Переменные окружения
+.env
+.env.local
+.env.development
+.env.production
+
+# Директории сборки
+/dist
+/build
+/.netlify
+
+# Кэш
+.cache/
+.webpack/
+
+# Тестовые файлы
+/coverage
+.nyc_output
+
+# Local Netlify folder
+.netlify 
