справлены ошибки конфигурации для успешного деплоя: 1) справлен синтаксис netlify.toml 2) Создан vercel.json в корне проекта 3) лучшен скрипт сборки в package.json 4) далены конфликтующие файлы конфигурации

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "api/public/index.html",
   "scripts": {
     "start": "netlify dev",
-    "build": "echo 'Build completed'",
+    "build": "node -e \"const fs = require('fs'); const dirs = ['api/public/assets', 'api/public/css', 'api/public/js']; dirs.forEach(dir => { if (!fs.existsSync(dir)) fs.mkdirSync(dir, { recursive: true }); }); console.log('Build completed');\"",
     "deploy": "netlify deploy --prod",
     "lint": "echo 'No linting configured'"
   },
