--- a/netlify.toml
+++ b/netlify.toml
@@ -47,27 +47,27 @@
   to = "/index.html"
   status = 200
 
-[headers]
+[[headers]]
   for = "/*"
-    [headers.values]
+  [headers.values]
     X-Content-Type-Options = "nosniff"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     Access-Control-Allow-Origin = "*"
 
-[headers]
+[[headers]]
   for = "/assets/*"
-    [headers.values]
+  [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
-[headers]
+[[headers]]
   for = "/css/*"
-    [headers.values]
+  [headers.values]
     Cache-Control = "public, max-age=86400"
 
-[headers]
+[[headers]]
   for = "/js/*"
-    [headers.values]
+  [headers.values]
     Cache-Control = "public, max-age=86400"
 
 [dev]
