--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0"
   },
-  "devDependencies": {
-    "netlify-lambda": "^2.0.16"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/falconexlover/55555.git"
