--- a/api/public/.htaccess
+++ b/api/public/.htaccess
@@ -25,11 +25,12 @@ RewriteEngine On
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/webp "access plus 1 year"
-    ExpiresByType text/css "access plus 1 month"
+    # Временно отключаем кэширование CSS и JavaScript для разработки
+    ExpiresByType text/css "access plus 0 seconds"
     ExpiresByType application/pdf "access plus 1 month"
-    ExpiresByType text/x-javascript "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType application/x-javascript "access plus 1 month"
+    ExpiresByType text/x-javascript "access plus 0 seconds"
+    ExpiresByType application/javascript "access plus 0 seconds"
+    ExpiresByType application/x-javascript "access plus 0 seconds"
     ExpiresByType image/x-icon "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 month"
     ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
